kubernetes/apps/code/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: code
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
